<resources>
    <string name="app_name">Balance</string>
    <string name="title_activity_initial__input">Initial_Input</string>
    <string name="setup">SETUP</string>
    <string name="essentials">Essentials (monthly)</string>
    <string name="food">groceries</string>
    <string name="travel">transportation</string>
    <string name="hjgh">other</string>
    <string name="non_essentials">Non-Essentials (monthly)</string>
    <string name="cable">cable</string>
    <string name="hgy">entertainment</string>
    <string name="title_activity_initial__input_2">Initial_Input_2</string>
    <string name="title_activity_nav_pane">NavPane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="data_input_header">Input Data Here</string>
    <string name="hello_blank_fragment">Input Data Here</string>
</resources>
