<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activities.Initial_Input"
    tools:paddingStart="15sp">

    <!--HEAD-->

    <TextView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya_sc_bold"
        android:gravity="end"
        android:minWidth="25dp"
        android:minHeight="25dp"
        android:text="@string/setup"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/EsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="509dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="start"
            android:minWidth="10dp"
            android:minHeight="25dp"
            android:text="@string/essentials"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:minHeight="25dp"
            android:text="@string/food"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_marginStart="60sp"
            tools:layout_width="wrap_content"
            tools:paddingStart="15sp" />

        <EditText
            android:id="@+id/foodmonies"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        android:paddingStart="20sp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="@string/travel"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_marginStart="35sp"
            tools:layout_width="wrap_content" />

        <EditText
            android:id="@+id/travelmonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="509dp"
        android:orientation="horizontal"
        android:paddingStart="20sp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="@string/hjgh"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content" />

        <EditText
            android:id="@+id/othermonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Es"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="180dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Es"
            android:layout_marginStart="5dp"
            android:fontFamily="serif"
            android:gravity="start"
            android:minWidth="10dp"
            android:minHeight="25dp"
            android:text="@string/non_essentials"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="@string/cable"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content" />

        <EditText
            android:id="@+id/cablemonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="509dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="@string/hgy"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content"
            tools:paddingStart="20sp" />

        <EditText
            android:id="@+id/entertainmentmonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="other"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content"
            tools:paddingStart="20sp" />

        <EditText
            android:id="@+id/neothermonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="serif"
            android:gravity="start"
            android:minWidth="10dp"
            android:minHeight="25dp"
            android:text="Non-Monthly Essentials"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Efhegs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="serif"
            android:gravity="start"
            android:minWidth="10dp"
            android:minHeight="25dp"
            android:text="(Add up for a year, round up if needed.)"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="light bill"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content"
            tools:paddingStart="20sp" />

        <EditText
            android:id="@+id/lightbill"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginBottom="509dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="water bill"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content"
            tools:paddingStart="20sp" />

        <EditText
            android:id="@+id/waterbill"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="509dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90sp"
            android:fontFamily="serif"
            android:gravity="end"
            android:minHeight="25dp"
            android:text="other"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_width="wrap_content"
            tools:paddingStart="20sp" />

        <EditText
            android:id="@+id/nmeothermonies"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:inputType="number"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:elevation="3sp" />

    </LinearLayout>

    <Button
        android:id="@+id/setcont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="170dp"
        android:text="SET" />
</RelativeLayout>